--- a/examples/permalink.html
+++ b/examples/permalink.html
@@ -15,16 +15,17 @@
 <script type='text/javascript'>
 	var map = L.map('map', {center: L.latLng(47.93, -3.44), zoom: 7});
 	var osm = L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
-	var pressure = L.tileLayer('https://{s}.tile.openweathermap.org/map/pressure_cntr/{z}/{x}/{y}.png', {
+	var appid = '9de243494c0b295cca9337e1e96b00e2'; // demo id
+	var pressure = L.tileLayer('https://{s}.tile.openweathermap.org/map/pressure_cntr/{z}/{x}/{y}.png?appid='+appid, {
 		maxZoom: 19,
 		attribution: 'Map data &copy; <a href="https://openweathermap.org">OpenWeatherMap</a>',
 		opacity: 0.5
 	});
-	map.addLayer(osm);
 	var hydda = L.tileLayer('https://{s}.tile.openstreetmap.se/hydda/full/{z}/{x}/{y}.png', {
 		attribution: 'Tiles courtesy of <a href="https://openstreetmap.se/" target="_blank">OpenStreetMap Sweden</a> &mdash; Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	});
 	var layers = L.control.layers({'OSM':osm, 'Hydda':hydda},{'Pressure':pressure});
+	map.addLayer(osm);
 	map.addControl(layers);
 	map.addControl(new L.Control.Permalink({text: 'Permalink', layers: layers}));
 </script>
